force-app/main/default/objects/FieloCRUD__RelatedView__c/FieloCRUD__RelatedView__c.object-meta.xml
<CustomObject>
    <label>Related View</label>
    <nameField>
        <displayFormat>RN-{00000}</displayFormat>
        <label>Related View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>