force-app/main/default/objects/FieloCRUD__RelatedView__c/fields/FieloCRUD__RelatedView__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__RelatedView__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related View</label>
    <referenceTo>FieloCRUD__ListView__c</referenceTo>
    <relationshipLabel>Related List Views</relationshipLabel>
    <relationshipName>ListViews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>