force-app/main/default/objects/FieloCRUD__RelatedView__c/fields/FieloCRUD__ViewName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ViewName__c</fullName>
    <formula>IF(
	ISBLANK(FieloCRUD__RelatedView__r.FieloCRUD__ViewName__c),
	FieloCRUD__RelatedView__r.Name,
	FieloCRUD__RelatedView__r.FieloCRUD__ViewName__c
)</formula>
    <label>View Name</label>
    <type>Text</type>
</CustomField>